--- a/package.json
+++ b/package.json
@@ -8,8 +8,24 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27",
+    "@icons-pack/react-simple-icons": "^3.1.1",
+    "@svgr/webpack": "^5.4.0",
+    "dotenv": "^8.2.0",
+    "emotion-theming": "^10.0.27",
+    "gray-matter": "^4.0.2",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "9.4.4",
+    "nprogress": "^0.2.0",
+    "raw-loader": "^4.0.1",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-feather": "^2.0.8",
+    "react-html-parser": "^2.0.2",
+    "react-markdown": "^4.3.1",
+    "react-syntax-highlighter": "^12.2.1",
+    "sass": "^1.26.7",
+    "use-dark-mode": "^2.3.1"
   }
 }
